<resources>
    <string name="app_name">Bloodbank</string>
    <string name="user1">username...</string>
    <string name="pass21">Password</string>
    <string name="use">"if you donate a <b>money</b> you give a <b>food</b> \n \t if you donate a <b>blood </b>you give a <b>life</b>"</string>
    <string name="con">Confirm</string>
    <string name="or"><u><b>OR</b></u></string>
    <string name="sign1u"><u>sign up</u></string>
    <string name="Username">User name</string>
    <string name="Phoneno">Phone number</string>
    <string name="logo">logo</string>
    <string name="Address"><u>ADDRESS</u></string>

    <string-array name="bloodgroup">
        <item><b>A+</b></item>
        <item><b>A-</b></item>
        <item><b>B+</b></item>
        <item><b>B-</b></item>
        <item><b>AB+</b></item>
        <item><b>AB-</b></item>
        <item><b>O+</b></item>
        <item><b>O-</b></item>
    </string-array>



</resources>
