<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

       <TextView
           android:layout_width="match_parent"
           android:text="@string/use"
           android:textSize="40sp"
           android:textColor="#B62727"
           android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
         android:id="@+id/username1"
        android:layout_width="match_parent"
        android:padding="10dp"
         app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:hint="@string/user1"
            android:drawableStart="@drawable/ic_account_box_black_24dp"
            android:textSize="25sp"
             android:drawablePadding="10dp"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass1"
        android:layout_width="match_parent"
        app:errorEnabled="true"
        app:counterEnabled="true"
        android:padding="10dp"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:hint="@string/pass21"
             android:drawableStart="@drawable/ic_lock_black_24dp"
            android:drawablePadding="10dp"
            android:textSize="25sp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
        />

    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/but1"
            android:layout_width="match_parent"

            android:background="@drawable/backfocu"
            android:textSize="30dp"
            android:padding="5dp"
            android:onClick="con1"
            android:layout_height="wrap_content"
             android:text="@string/con"
            />

    </LinearLayout>

</ScrollView>